added mergesort and mergesortmult classes and simple timer class

--- a/Lab3/Lab3/Lab3.vcxproj
+++ b/Lab3/Lab3/Lab3.vcxproj
@@ -141,6 +141,11 @@
   <ItemGroup>
     <ClCompile Include="Lab3.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Timer.h" />
+    <ClInclude Include="Str.h" />
+    <ClInclude Include="MergeSort.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
